cmake_minimum_required(VERSION 3.13)
project(C-_Course)
set(CMAKE_CXX_STANDARD 14)
add_executable(Exercise_1.1 LE1/Exercise_1/Exercise_1.1.cpp)
add_executable(Exercise_1.2 LE1/Exercise_2/Exercise_1.2.cpp)
add_executable(Exercise_1.3 LE1/Exercise_3/Exercise_1.3.cpp)
add_executable(Exercise_1.4 LE1/Exercise_4/Exercise_1.4.cpp)
add_executable(Exercise_1.5 LE1/Exercise_5/Exercise_1.5.cpp)
add_executable(Exercise_2.1 LE2/Exercise_1/Exercise_2.1.cpp)
add_executable(Exercise_2.3 LE2/Exercise_3/Exercise_2.3.cpp)
add_executable(Exercise_2.5 LE2/Exercise_5/Exercise_2.5.cpp)

